syntax = "proto3";

package mizer;

import "nodes.proto";

service LayoutsApi {
  rpc GetLayouts (GetLayoutsRequest) returns (Layouts) {}
  rpc AddLayout (AddLayoutRequest) returns (Layouts) {}
  rpc RemoveLayout (RemoveLayoutRequest) returns (Layouts) {}
  rpc RenameLayout (RenameLayoutRequest) returns (Layouts) {}

  rpc RenameControl(RenameControlRequest) returns (LayoutResponse) {}
  rpc MoveControl(MoveControlRequest) returns (LayoutResponse) {}
  rpc UpdateControlDecoration(UpdateControlDecorationRequest) returns (LayoutResponse) {}
  rpc UpdateControlBehavior(UpdateControlBehaviorRequest) returns (LayoutResponse) {}
  rpc RemoveControl(RemoveControlRequest) returns (LayoutResponse) {}
  rpc AddControl (AddControlRequest) returns (LayoutResponse) {}
  rpc AddExistingControl (AddExistingControlRequest) returns (LayoutResponse) {}

  rpc ReadFaderValue (ReadFaderValueRequest) returns (FaderValueResponse) {}
}

message LayoutResponse {
}

message GetLayoutsRequest {
}

message AddLayoutRequest {
  string name = 1;
}

message RemoveLayoutRequest {
  string id = 1;
}

message RenameLayoutRequest {
  string id = 1;
  string name = 2;
}

message RenameControlRequest {
  string layout_id = 1;
  string control_id = 2;
  string name = 3;
}

message MoveControlRequest {
  string layout_id = 1;
  string control_id = 2;
  ControlPosition position = 3;
}

message UpdateControlDecorationRequest {
  string layout_id = 1;
  string control_id = 2;
  ControlDecorations decorations = 3;
}

message UpdateControlBehaviorRequest {
  string layout_id = 1;
  string control_id = 2;
  ControlBehavior behavior = 3;
}

message RemoveControlRequest {
  string layout_id = 1;
  string control_id = 2;
}

message AddControlRequest {
  string layout_id = 1;
  mizer.nodes.Node.NodeType node_type = 2;
  ControlPosition position = 3;
}

message AddExistingControlRequest {
  string layout_id = 1;
  string node = 2;
  ControlPosition position = 3;
}

message Layouts {
  repeated Layout layouts = 1;
}

message Layout {
  string id = 1;
  repeated LayoutControl controls = 2;
}

message LayoutControl {
  string node = 1;
  ControlPosition position = 2;
  ControlSize size = 3;
  string label = 4;
  ControlDecorations decoration = 5;
  ControlBehavior behavior = 6;
}

message ControlPosition {
  uint64 x = 1;
  uint64 y = 2;
}

message ControlSize {
  uint64 width = 1;
  uint64 height = 2;
}

message ControlDecorations {
  bool has_color = 1;
  Color color = 2;
  bool has_image = 3;
  bytes image = 4;
}

message Color {
  double red = 1;
  double green = 2;
  double blue = 3;
}

message ControlBehavior {
  SequencerControlBehavior sequencer = 1;
}

message SequencerControlBehavior {
  ClickBehavior click_behavior = 1;

  enum ClickBehavior {
    GO_FORWARD = 0;
    TOGGLE = 1;
  }
}

message ReadFaderValueRequest {
  string node = 1;
}

message FaderValueResponse {
  double value = 1;
}
